# minir

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  kilo.json  pyproject.toml  readme_cn.md  requirements.txt
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  HYBRID_MODE.md  README.md  convomem_bench.py  fastmcp_bench.py  locomo_bench.py  longmemeval_bench.py  membench_bench.py  skeleton_stress_bench.py
docs/: fastmcp_benchmark_checkpoint.md
examples/: basic_mining.py  convo_import.py  mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh  mimir_precompact_hook.sh  mimir_save_hook.sh
mempalace/: autosave.py  mcp_server.py  normalize.py  skeleton_search.py
mimir/: README.md  __init__.py  __main__.py  autosave.py  cli.py  config.py  conversation_skeleton.py  dialect.py  entity_detector.py  entity_registry.py  mcp_server.py  normalize.py  skeleton_search.py  spellcheck.py  split_mega_files.py
tests/: test_autosave.py  test_config.py  test_conversation_skeleton.py  test_normalize.py
todo/: autosave_relationship_skeleton.md
