[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir"
version = "3.0.0"
description = "Pure Python Skeleton Memory System — Fast, local, long-term memory for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "skeleton", "mcp",
    "context-window", "long-term-memory", "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "autocorrect>=2.6.1",
]

[project.urls]
Homepage = "https://github.com/milla-jovovich/mimir"
Repository = "https://github.com/milla-jovovich/mimir"
"Bug Tracker" = "https://github.com/milla-jovovich/mimir/issues"

[tool.setuptools.packages.find]
include = ["mimir*"]

[project.scripts]
mimir = "mimir.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
